# Server/api/openapi.yaml
@@ -132,6 +132,61 @@ paths:
       tags:
       - AllowedPlacesType
       x-swagger-router-controller: AllowedPlacesType
+  /allowed_places:
+    get:
+      description: Return all the allowed places given a radius and two coordinates
+      operationId: getAllowedPlaces
+      parameters:
+      - description: Center latitude 
+        explode: true
+        in: query
+        name: lat
+        required: true
+        schema:
+          type: number
+      - description: Center longitude
+        explode: true
+        in: query
+        name: long
+        required: true
+        schema:
+          type: number
+      - description: radius
+        explode: true
+        in: query
+        name: radius
+        required: true
+        schema:
+          type: integer
+      responses:
+        201:
+          content:
+            text/plain:
+              schema:
+                example: Success
+                title: Success
+                type: string
+          description: Success
+        404:
+          content:
+            text/plain:
+              schema:
+                example: Not found
+                title: Endpoint not found
+                type: string
+          description: Not found response
+        405:
+          content:
+            text/plain:
+              schema:
+                example: The format is not valid
+                title: Invalid input
+                type: string
+          description: Invalid input
+      summary: Return all the allowed places given a radius and two coordinates
+      tags:
+      - AllowedPlaces
+      x-swagger-router-controller: AllowedPlaces
   /device_id:
     delete:
       description: This deletes the device ID.
